[BUGFIX] Add scrollbars to dropdowns

--- a/src/_minimal/less/base/general.less
+++ b/src/_minimal/less/base/general.less
@@ -51,6 +51,16 @@ html,
   }
 }
 
+.os-theme-custom {
+  --os-size: 10px;
+  --os-handle-perpendicular-size: 3px;
+  --os-handle-perpendicular-size-hover: 7px;
+  --os-handle-interactive-area-offset: 4px;
+  --os-handle-bg: #c1c1c1;
+  --os-handle-bg-hover: #c1c1c1;
+  --os-handle-bg-active: #c1c1c1;
+}
+
 #minimalApp {
   background-color: var(--cl-background);
   max-width: 1400px;
